--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+		<styles>
+			body {
+				font-size: 16px;
+			}
+		</styles>
 	</head>
 	<body></body>
 	<!-- ORG 260 -->
-	<script type='text/javascript'>
+	<!-- <script type='text/javascript'>
 		function initEmbeddedMessaging() {
 			try {
 				agentforce_messaging.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
@@ -23,27 +28,27 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-0e502dfd70.test1.my.pc-rnd.site.com/ESWCWCDeployment1756835771901/assets/js/init.js' onload='initEmbeddedMessaging()'></script>
+	<script type='text/javascript' src='https://orgfarm-0e502dfd70.test1.my.pc-rnd.site.com/ESWCWCDeployment1756835771901/assets/js/init.js' onload='initEmbeddedMessaging()'></script> -->
 
-  <script type='text/javascript'>
-  	function initEmbeddedMessaging() {
-  		try {
-  			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
-  
-  			embeddedservice_bootstrap.init(
-  				'00Dxx00EBzEBkq0',
-  				'MIAW_Chat',
-  				'https://orgfarm-043be681a1.my.site-com.f8qxboxam4v114flce8v0frrh1k4t.wa.crm.dev:6101/ESWMIAWChat1761254661086',
-  				{
-  					scrt2URL: 'http://orgfarm-043be681a1.my.salesforce-scrt-com.f8qxboxam4v114flce8v0frrh1k4t.wa.crm.dev'
-  				}
-  			);
-  		} catch (err) {
-  			console.error('Error loading Embedded Messaging: ', err);
-  		}
-  	};
-  </script>
-  <script type='text/javascript' src='https://orgfarm-043be681a1.my.site-com.f8qxboxam4v114flce8v0frrh1k4t.wa.crm.dev:6101/ESWMIAWChat1761254661086/assets/js/init.js' onload='initEmbeddedMessaging()'></script>
+	<script type='text/javascript'>
+		function initEmbeddedMessaging() {
+			try {
+				embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+		
+				embeddedservice_bootstrap.init(
+					'00Dxx00EBzEBkq0',
+					'MIAW_Chat',
+					'https://orgfarm-043be681a1.my.site-com.f8qxboxam4v114flce8v0frrh1k4t.wa.crm.dev:6101/ESWMIAWChat1761254661086',
+					{
+						scrt2URL: 'http://orgfarm-043be681a1.my.salesforce-scrt-com.f8qxboxam4v114flce8v0frrh1k4t.wa.crm.dev'
+					}
+				);
+			} catch (err) {
+				console.error('Error loading Embedded Messaging: ', err);
+			}
+		};
+	</script>
+	<script type='text/javascript' src='https://orgfarm-043be681a1.my.site-com.f8qxboxam4v114flce8v0frrh1k4t.wa.crm.dev:6101/ESWMIAWChat1761254661086/assets/js/init.js' onload='initEmbeddedMessaging()'></script>
 
   
 
