--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-		<styles>
+		<style>
 			body {
 				font-size: 16px;
 			}
-		</styles>
+		</style>
 	</head>
 	<body></body>
 	<!-- ORG 260 -->
