--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					'MIAW_Chat',
 					'https://orgfarm-043be681a1.my.site-com.f8qxboxam4v114flce8v0frrh1k4t.wa.crm.dev:6101/ESWMIAWChat1761254661086',
 					{
-						scrt2URL: 'https://orgfarm-043be681a1.my.salesforce-scrt-com.f8qxboxam4v114flce8v0frrh1k4t.wa.crm.dev'
+						scrt2URL: 'https://orgfarm-0e502dfd70.test1.my.pc-rnd.salesforce-scrt.com'
 					}
 				);
 			} catch (err) {
