--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 				embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 		
 				embeddedservice_bootstrap.init(
-					'00Dxx00EBzEBkq0',
-					'MIAW_Chat',
-					'https://orgfarm-043be681a1.my.site-com.f8qxboxam4v114flce8v0frrh1k4t.wa.crm.dev:6101/ESWMIAWChat1761254661086',
+					'00DSG00000XveaP',
+					'CWC_Deployment',
+					'https://orgfarm-0e502dfd70.test1.my.pc-rnd.site.com/ESWCWCDeployment1756835771901',
 					{
 						scrt2URL: 'https://orgfarm-0e502dfd70.test1.my.pc-rnd.salesforce-scrt.com'
 					}
