--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 				embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 		
 				embeddedservice_bootstrap.init(
-					'00DSG00000XveaP',
-					'CWC_Deployment',
-					'https://orgfarm-0e502dfd70.test1.my.pc-rnd.site.com/ESWCWCDeployment1756835771901',
+					'00DSB00000dKpEP',
+					'Deployment1',
+					'https://orgfarm-927f5dd53d.test1.my.pc-rnd.site.com/ESWDeployment11761246642876',
 					{
-						scrt2URL: 'https://orgfarm-0e502dfd70.test1.my.pc-rnd.salesforce-scrt.com'
+						scrt2URL: 'https://orgfarm-927f5dd53d.test1.my.pc-rnd.salesforce-scrt.com'
 					}
 				);
 			} catch (err) {
