--- a/index.html
+++ b/index.html
@@ -36,18 +36,19 @@
 				embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 		
 				embeddedservice_bootstrap.init(
-					// '00DLT000009b5d3',
-					// 'CWC_Deployment',
-					// 'https://orgfarm-7261fc75b8.test1.my.pc-rnd.site.com/ESWCWCDeployment1761257874011',
-					// {
-					// 	scrt2URL: 'https://orgfarm-7261fc75b8.test1.my.pc-rnd.salesforce-scrt.com'
-					// }
-					'00DSB00000dKpEP',
-					'Deployment1',
-					'https://orgfarm-927f5dd53d.test1.my.pc-rnd.site.com/ESWDeployment11761246642876',
+					'00DLT000009b5d3',
+					'CWC_Deployment',
+					'https://orgfarm-7261fc75b8.test1.my.pc-rnd.site.com/ESWCWCDeployment1761257874011',
 					{
-						scrt2URL: 'https://orgfarm-927f5dd53d.test1.my.pc-rnd.salesforce-scrt.com'
+						scrt2URL: 'https://orgfarm-7261fc75b8.test1.my.pc-rnd.salesforce-scrt.com'
 					}
+					// Steph's
+					// '00DSB00000dKpEP',
+					// 'Deployment1',
+					// 'https://orgfarm-927f5dd53d.test1.my.pc-rnd.site.com/ESWDeployment11761246642876',
+					// {
+					// 	scrt2URL: 'https://orgfarm-927f5dd53d.test1.my.pc-rnd.salesforce-scrt.com'
+					// }
 				);
 			} catch (err) {
 				console.error('Error loading Embedded Messaging: ', err);
