--- a/index.html
+++ b/index.html
@@ -34,28 +34,21 @@
 		function initEmbeddedMessaging() {
 			try {
 				embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
-		
+	
 				embeddedservice_bootstrap.init(
-					'00DLT000009b5d3',
-					'CWC_Deployment',
-					'https://orgfarm-7261fc75b8.test1.my.pc-rnd.site.com/ESWCWCDeployment1761257874011',
+					'00DVW000004eEuo',
+					'Food_Options_921',
+					'https://orgfarm-d58802e2eb.test1.my.pc-rnd.site.com/ESWFoodOptions9211758508250747',
 					{
-						scrt2URL: 'https://orgfarm-7261fc75b8.test1.my.pc-rnd.salesforce-scrt.com'
+						scrt2URL: 'https://orgfarm-d58802e2eb.test1.my.pc-rnd.salesforce-scrt.com'
 					}
-					// Steph's
-					// '00DSB00000dKpEP',
-					// 'Deployment1',
-					// 'https://orgfarm-927f5dd53d.test1.my.pc-rnd.site.com/ESWDeployment11761246642876',
-					// {
-					// 	scrt2URL: 'https://orgfarm-927f5dd53d.test1.my.pc-rnd.salesforce-scrt.com'
-					// }
 				);
 			} catch (err) {
 				console.error('Error loading Embedded Messaging: ', err);
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-043be681a1.my.site-com.f8qxboxam4v114flce8v0frrh1k4t.wa.crm.dev:6101/ESWMIAWChat1761254661086/assets/js/init.js' onload='initEmbeddedMessaging()'></script>
+	<script type='text/javascript' src='https://orgfarm-2e3e0a476e.my.site-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev:6101/ESWCWCDeployment1761333788274/assets/js/init.js' onload='initEmbeddedMessaging()'></script>
 
   
 
