--- a/index.html
+++ b/index.html
@@ -36,11 +36,17 @@
 				embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 	
 				embeddedservice_bootstrap.init(
-					'00DVW000004eEuo',
-					'Food_Options_921',
-					'https://orgfarm-d58802e2eb.test1.my.pc-rnd.site.com/ESWFoodOptions9211758508250747',
+					// '00DVW000004eEuo',
+					// 'Food_Options_921',
+					// 'https://orgfarm-d58802e2eb.test1.my.pc-rnd.site.com/ESWFoodOptions9211758508250747',
+					// {
+					// 	scrt2URL: 'https://orgfarm-d58802e2eb.test1.my.pc-rnd.salesforce-scrt.com'
+					// }
+					'00Dxx00727U4JnU',
+					'CWC_Deployment',
+					'https://orgfarm-2e3e0a476e.my.site-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev:6101/ESWCWCDeployment1761333788274',
 					{
-						scrt2URL: 'https://orgfarm-d58802e2eb.test1.my.pc-rnd.salesforce-scrt.com'
+						scrt2URL: 'http://orgfarm-2e3e0a476e.my.salesforce-scrt-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev'
 					}
 				);
 			} catch (err) {
