--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					'CWC_Deployment',
 					'https://orgfarm-2e3e0a476e.my.site-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev:6101/ESWCWCDeployment1761333788274',
 					{
-						scrt2URL: 'http://orgfarm-2e3e0a476e.my.salesforce-scrt-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev'
+						scrt2URL: 'https://orgfarm-2e3e0a476e.my.salesforce-scrt-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev'
 					}
 				);
 			} catch (err) {
