--- a/index.html
+++ b/index.html
@@ -33,28 +33,28 @@
 	<script type='text/javascript'>
 		function initEmbeddedMessaging() {
 			try {
-				embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+				agentforce_messaging.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 	
-				embeddedservice_bootstrap.init(
-					// '00DVW000004eEuo',
-					// 'Food_Options_921',
-					// 'https://orgfarm-d58802e2eb.test1.my.pc-rnd.site.com/ESWFoodOptions9211758508250747',
-					// {
-					// 	scrt2URL: 'https://orgfarm-d58802e2eb.test1.my.pc-rnd.salesforce-scrt.com'
-					// }
-					'00Dxx00727U4JnU',
-					'CWC_Deployment',
-					'https://orgfarm-2e3e0a476e.my.site-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev:6101/ESWCWCDeployment1761333788274',
+				agentforce_messaging.init(
+					'00DVW000004eEuo',
+					'Food_Options_921',
+					'https://orgfarm-d58802e2eb.test1.my.pc-rnd.site.com/ESWFoodOptions9211758508250747',
 					{
-						scrt2URL: 'https://orgfarm-2e3e0a476e.my.salesforce-scrt-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev'
+						scrt2URL: 'https://orgfarm-d58802e2eb.test1.my.pc-rnd.salesforce-scrt.com'
 					}
+					// '00Dxx00727U4JnU',
+					// 'CWC_Deployment',
+					// 'https://orgfarm-2e3e0a476e.my.site-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev:6101/ESWCWCDeployment1761333788274',
+					// {
+					// 	scrt2URL: 'https://orgfarm-2e3e0a476e.my.salesforce-scrt-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev'
+					// }
 				);
 			} catch (err) {
 				console.error('Error loading Embedded Messaging: ', err);
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-2e3e0a476e.my.site-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev:6101/ESWCWCDeployment1761333788274/assets/js/init.js' onload='initEmbeddedMessaging()'></script>
+	<script type='text/javascript' src='https://orgfarm-2e3e0a476e.my.site-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev:6101/ESWCWCDeployment1761333788274/assets/js/init.js' onload='initAgentforceMessaging()'></script>
 
 	<!-- Org 258 -->
 	<!--  <script type='text/javascript'>
