--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<script type='text/javascript' src='https://orgfarm-0e502dfd70.test1.my.pc-rnd.site.com/ESWCWCDeployment1756835771901/assets/js/init.js' onload='initEmbeddedMessaging()'></script> -->
 
 	<script type='text/javascript'>
-		function initEmbeddedMessaging() {
+		function initAgentforceMessaging() {
 			try {
 				agentforce_messaging.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 	
