--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
 				agentforce_messaging.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 	
 				agentforce_messaging.init(
-					'00DVW000004eEuo',
-					'Food_Options_921',
+					// '00DVW000004eEuo',
+					// 'Food_Options_921',
+					'00Dxx00727U4JnU',
+					'CWC_Deployment',
 					'https://orgfarm-d58802e2eb.test1.my.pc-rnd.site.com/ESWFoodOptions9211758508250747',
 					{
 						scrt2URL: 'https://orgfarm-d58802e2eb.test1.my.pc-rnd.salesforce-scrt.com'
