--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 				agentforce_messaging.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 	
 				agentforce_messaging.init(
-					// '00DVW000004eEuo',
-					// 'Food_Options_921',
-					'00Dxx00727U4JnU',
-					'CWC_Deployment',
+					'00DVW000004eEuo',
+					'Food_Options_921',
+					// '00Dxx00727U4JnU',
+					// 'CWC_Deployment',
 					'https://orgfarm-2e3e0a476e.my.site-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev:6101/ESWCWCDeployment1761333788274',
 					{
 						scrt2URL: 'https://orgfarm-d58802e2eb.test1.my.pc-rnd.salesforce-scrt.com'
