--- a/index.html
+++ b/index.html
@@ -228,11 +228,11 @@
 			agentforce_messaging.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 
 			agentforce_messaging.init(
-				'00DTC000004tLW9',
+				'00DSB00000ciu2E',
 				'Food_Options3',
 				'https://orgfarm-2e3e0a476e.my.site-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev:6101/ESWCWCDeployment1761333788274',
 				{
-					scrt2URL: 'https://orange8--cwc1.sandbox.test1.my.pc-rnd.salesforce-scrt.com'
+					scrt2URL: 'https://green2.test1.my.pc-rnd.salesforce-scrt.com'
 				}
 				// '00Dxx00727U4JnU',
 				// 'CWC_Deployment',
