--- a/index.html
+++ b/index.html
@@ -228,11 +228,11 @@
 			agentforce_messaging.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 
 			agentforce_messaging.init(
-				'00DSB00000cqUs9',
-				'Food_Options3',
+				'00DSB00000dKpEP',
+				'Deployment1',
 				'https://orgfarm-2e3e0a476e.my.site-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev:6101/ESWCWCDeployment1761333788274',
 				{
-					scrt2URL: 'https://orange7.test1.my.pc-rnd.salesforce-scrt.com'
+					scrt2URL: 'https://orgfarm-927f5dd53d.test1.my.pc-rnd.salesforce-scrt.com'
 				}
 				// '00Dxx00727U4JnU',
 				// 'CWC_Deployment',
