--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
 		function initAgentforceMessaging() {
 			try {
 				agentforce_messaging.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+				agentforce_messaging.settings.devMode = true;
 	
 				agentforce_messaging.init(
 					'00DSB00000dKyKv',
@@ -254,7 +255,7 @@
 		function initEmbeddedMessaging() {
 			try {
 				embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
-				embeddedservice_bootstrap.settings.devMode = true
+				embeddedservice_bootstrap.settings.devMode = true;
 	
 				embeddedservice_bootstrap.init(
 					'00DSG00000YEMY9',
