--- a/index.html
+++ b/index.html
@@ -223,18 +223,21 @@
 	    </footer>
 	</body>
 	<!-- LOCAL/WS -->
-	<!-- <script type='text/javascript'>
+	<script type='text/javascript'>
 		function initAgentforceMessaging() {
 			try {
 				agentforce_messaging.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 				agentforce_messaging.settings.devMode = true;
 	
 				agentforce_messaging.init(
-					'00DSB00000dKyKv',
-					'Deployment1',
+					// '00DSB00000dKyKv',
+					// 'Deployment1',
+					'00DSG00000YEMY9',
+					'MIAW_chat',
 					'https://orgfarm-2e3e0a476e.my.site-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev:6101/ESWCWCDeployment1761333788274',
 					{
-						scrt2URL: 'https://orgfarm-06a9a7ca25.test1.my.pc-rnd.salesforce-scrt.com'
+						// scrt2URL: 'https://orgfarm-06a9a7ca25.test1.my.pc-rnd.salesforce-scrt.com'
+						scrt2URL: 'https://orgfarm-578b5aa106.test1.my.pc-rnd.salesforce-scrt.com'
 					}
 					// '00Dxx00727U4JnU',
 					// 'CWC_Deployment',
@@ -248,10 +251,10 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-2e3e0a476e.my.site-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev:6101/ESWCWCDeployment1761333788274/assets/js/init.js' onload='initAgentforceMessaging()'></script> -->
+	<script type='text/javascript' src='https://orgfarm-2e3e0a476e.my.site-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev:6101/ESWCWCDeployment1761333788274/assets/js/init.js' onload='initAgentforceMessaging()'></script>
 	<!-- END LOCAL -->
 	<!-- STM ORG -->
-	<script type='text/javascript'>
+	<!-- <script type='text/javascript'>
 		function initEmbeddedMessaging() {
 			try {
 				embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
@@ -270,5 +273,5 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-578b5aa106.test1.my.pc-rnd.site.com/ESWChannel11756933866072/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+	<script type='text/javascript' src='https://orgfarm-578b5aa106.test1.my.pc-rnd.site.com/ESWChannel11756933866072/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script> -->
 </html>
