--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 	    </footer>
 	</body>
 	<!-- LOCAL/WS -->
-	<script type='text/javascript'>
+	<!-- <script type='text/javascript'>
 		function initAgentforceMessaging() {
 			try {
 				agentforce_messaging.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
@@ -251,10 +251,10 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-2e3e0a476e.my.site-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev:6101/ESWCWCDeployment1761333788274/assets/js/init.js' onload='initAgentforceMessaging()'></script>
+	<script type='text/javascript' src='https://orgfarm-2e3e0a476e.my.site-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev:6101/ESWCWCDeployment1761333788274/assets/js/init.js' onload='initAgentforceMessaging()'></script> -->
 	<!-- END LOCAL -->
 	<!-- STM ORG -->
-	<!-- <script type='text/javascript'>
+	<script type='text/javascript'>
 		function initEmbeddedMessaging() {
 			try {
 				embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
@@ -273,5 +273,5 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-578b5aa106.test1.my.pc-rnd.site.com/ESWChannel11756933866072/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script> -->
+	<script type='text/javascript' src='https://orgfarm-578b5aa106.test1.my.pc-rnd.site.com/ESWChannel11756933866072/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 </html>
