--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 					// 'Deployment1',
 					'00DSG00000YEMY9',
 					'MIAW_chat',
-					'https://orgfarm-2e3e0a476e.my.site-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev:6101/ESWCWCDeployment1761333788274',
+					'https://orgfarm-d0ad693b09.my.site-com.1xnsfqx1m0601n7g2zy64.wa.crm.dev:6101/ESWCWCDeployment1763678734681'',
 					{
 						// scrt2URL: 'https://orgfarm-06a9a7ca25.test1.my.pc-rnd.salesforce-scrt.com'
 						scrt2URL: 'https://orgfarm-578b5aa106.test1.my.pc-rnd.salesforce-scrt.com'
@@ -251,7 +251,7 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-2e3e0a476e.my.site-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev:6101/ESWCWCDeployment1761333788274/assets/js/init.js' onload='initAgentforceMessaging()'></script>
+	<script type='text/javascript' src='https://orgfarm-d0ad693b09.my.site-com.1xnsfqx1m0601n7g2zy64.wa.crm.dev:6101/ESWCWCDeployment1763678734681/assets/js/init.js' onload='initAgentforceMessaging()'></script>
 	<!-- END LOCAL -->
 	<!-- STM ORG -->
 	<!-- <script type='text/javascript'>
