--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@
 					// 'Deployment1',
 					'00DSG00000YEMY9',
 					'MIAW_chat',
-					'https://orgfarm-d0ad693b09.my.site-com.1xnsfqx1m0601n7g2zy64.wa.crm.dev:6101/ESWCWCDeployment1763678734681',
+					// 'https://orgfarm-d0ad693b09.my.site-com.1xnsfqx1m0601n7g2zy64.wa.crm.dev:6101/ESWCWCDeployment1763678734681',
+					'https://orgfarm-578b5aa106.test1.my.pc-rnd.site.com/ESWChannel11756933866072'
 					{
 						// scrt2URL: 'https://orgfarm-06a9a7ca25.test1.my.pc-rnd.salesforce-scrt.com'
 						scrt2URL: 'https://orgfarm-578b5aa106.test1.my.pc-rnd.salesforce-scrt.com'
@@ -251,7 +252,8 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-d0ad693b09.my.site-com.1xnsfqx1m0601n7g2zy64.wa.crm.dev:6101/ESWCWCDeployment1763678734681/assets/js/init.js' onload='initAgentforceMessaging()'></script>
+	<script type='text/javascript' src='https://orgfarm-578b5aa106.test1.my.pc-rnd.site.com/ESWChannel11756933866072/assets/js/bootstrap.min.js' onload='initAgentforceMessaging()'></script>
+	<!-- <script type='text/javascript' src='https://orgfarm-d0ad693b09.my.site-com.1xnsfqx1m0601n7g2zy64.wa.crm.dev:6101/ESWCWCDeployment1763678734681/assets/js/init.js' onload='initAgentforceMessaging()'></script> -->
 	<!-- END LOCAL -->
 	<!-- STM ORG -->
 	<!-- <script type='text/javascript'>
