--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 					// 'Deployment1',
 					'00DSG00000YEMY9',
 					'MIAW_chat',
-					'https://orgfarm-e9e9d2da7d.my.site-com.39ldkxhe8kup0ceqbppdkyri.wb.crm.dev:6101/ESWCWCDeployment1764613264188',
+					'https://orgfarm-fbd13fb5ab.my.site-com.kti1yob9433d14g59olgdborj1z0b.wa.crm.dev:6101/ESWCWCDeployment1764790936146',
 					{
 						// scrt2URL: 'https://orgfarm-06a9a7ca25.test1.my.pc-rnd.salesforce-scrt.com'
 						scrt2URL: 'https://orgfarm-578b5aa106.test1.my.pc-rnd.salesforce-scrt.com'
@@ -251,7 +251,7 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-e9e9d2da7d.my.site-com.39ldkxhe8kup0ceqbppdkyri.wb.crm.dev:6101/ESWCWCDeployment1764613264188/assets/js/bootstrap.min.js' onload='initAgentforceMessaging()'></script>
+	<script type='text/javascript' src='https://orgfarm-fbd13fb5ab.my.site-com.kti1yob9433d14g59olgdborj1z0b.wa.crm.dev:6101/ESWCWCDeployment1764790936146/assets/js/bootstrap.min.js' onload='initAgentforceMessaging()'></script>
 	<!-- END LOCAL -->
 	<!-- STM ORG -->
 	<!-- <script type='text/javascript'>
