--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-fbd13fb5ab.my.site-com.kti1yob9433d14g59olgdborj1z0b.wa.crm.dev:6101/ESWCWCDeployment1764790936146/assets/js/bootstrap.min.js' onload='initAgentforceMessaging()'></script>
+	<script type='text/javascript' src='https://orgfarm-fbd13fb5ab.my.site-com.kti1yob9433d14g59olgdborj1z0b.wa.crm.dev:6101/ESWCWCDeployment1764790936146/assets/js/init.js' onload='initAgentforceMessaging()'></script>
 	<!-- END LOCAL -->
 	<!-- STM ORG -->
 	<!-- <script type='text/javascript'>
