--- a/index.html
+++ b/index.html
@@ -230,28 +230,19 @@
 				agentforce_messaging.settings.devMode = true;
 	
 				agentforce_messaging.init(
-					// '00DSB00000dKyKv',
-					// 'Deployment1',
 					'00DSG00000YEMY9',
 					'MIAW_chat',
-					'https://orgfarm-fbd13fb5ab.my.site-com.kti1yob9433d14g59olgdborj1z0b.wa.crm.dev:6101/ESWCWCDeployment1764790936146',
+					'https://orgfarm-20537fa8ae.my.site-com.ueokwdrrdvni11x0kugccna.wc.crm.dev:6101/ESWCWCDeployment1765397026581',
 					{
-						// scrt2URL: 'https://orgfarm-06a9a7ca25.test1.my.pc-rnd.salesforce-scrt.com'
 						scrt2URL: 'https://orgfarm-578b5aa106.test1.my.pc-rnd.salesforce-scrt.com'
 					}
-					// '00Dxx00727U4JnU',
-					// 'CWC_Deployment',
-					// 'https://orgfarm-2e3e0a476e.my.site-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev:6101/ESWCWCDeployment1761333788274',
-					// {
-					// 	scrt2URL: 'https://orgfarm-2e3e0a476e.my.salesforce-scrt-com.zfxk14ry6sib0ytlykwgtf6rm1nff.wa.crm.dev'
-					// }
 				);
 			} catch (err) {
 				console.error('Error loading Embedded Messaging: ', err);
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-fbd13fb5ab.my.site-com.kti1yob9433d14g59olgdborj1z0b.wa.crm.dev:6101/ESWCWCDeployment1764790936146/assets/js/init.js' onload='initAgentforceMessaging()'></script>
+	<script type='text/javascript' src='https://orgfarm-20537fa8ae.my.site-com.ueokwdrrdvni11x0kugccna.wc.crm.dev:6101/ESWCWCDeployment1765397026581/assets/js/init.js' onload='initAgentforceMessaging()'></script>
 	<!-- END LOCAL -->
 	<!-- STM ORG -->
 	<!-- <script type='text/javascript'>
