--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 				agentforce_messaging.init(
 					'00DSG00000YEMY9',
 					'MIAW_chat',
-					'https://orgfarm-7d8e394d81.my.site-com.1tuiwbc937td1m4hzcn9kl.wb.crm.dev:6101/ESWCWCDeployment1765479885145',
+					'https://orgfarm-d5afb27e0d.my.site-com.812uttlj46on0nva2k1ww8ysy0.wa.crm.dev:6101/ESWCWCDeplyment1765564112145',
 					{
 						scrt2URL: 'https://orgfarm-578b5aa106.test1.my.pc-rnd.salesforce-scrt.com'
 					}
@@ -242,7 +242,7 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-7d8e394d81.my.site-com.1tuiwbc937td1m4hzcn9kl.wb.crm.dev:6101/ESWCWCDeployment1765479885145/assets/js/init.js' onload='initAgentforceMessaging()'></script>
+	<script type='text/javascript' src='https://orgfarm-d5afb27e0d.my.site-com.812uttlj46on0nva2k1ww8ysy0.wa.crm.dev:6101/ESWCWCDeplyment1765564112145/assets/js/init.js' onload='initAgentforceMessaging()'></script>
 	<!-- END LOCAL -->
 	<!-- STM ORG -->
 	<!-- <script type='text/javascript'>
