--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@
 				agentforce_messaging.settings.devMode = true;
 	
 				agentforce_messaging.init(
-					'00DSG00000YEMY9',
-					'MIAW_chat',
+					'00DSB00000eI9Ij',
+					'RouteToQueue',
 					'https://orgfarm-be6e139c1c.my.site-com.3g5hfjy6tcsa0zspauqygnvdc0ow.wa.crm.dev:6101/ESWCWC1765903918729',
 					{
-						scrt2URL: 'https://orgfarm-578b5aa106.test1.my.pc-rnd.salesforce-scrt.com'
+						scrt2URL: 'https://orgfarm-ced027a75c.test1.my.pc-rnd.salesforce-scrt.com'
 					}
 				);
 			} catch (err) {
