--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 	
 				agentforce_messaging.init(
 					'00DSB00000eI9Ij',
-					'RouteToQueue',
+					'MIAW',
 					'https://orgfarm-be6e139c1c.my.site-com.3g5hfjy6tcsa0zspauqygnvdc0ow.wa.crm.dev:6101/ESWCWC1765903918729',
 					{
 						scrt2URL: 'https://orgfarm-ced027a75c.test1.my.pc-rnd.salesforce-scrt.com'
