--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 				agentforce_messaging.init(
 					'00DSB00000eI9Ij',
 					'MIAW',
-					'https://orgfarm-be6e139c1c.my.site-com.3g5hfjy6tcsa0zspauqygnvdc0ow.wa.crm.dev:6101/ESWCWC1765903918729',
+					'https://orgfarm-03ed939e5a.my.site-com.9jsfico4gb5c1r0lli71zl8oo1ks8i.wb.crm.dev:6101/ESWCWC1766091842698',
 					{
 						scrt2URL: 'https://orgfarm-ced027a75c.test1.my.pc-rnd.salesforce-scrt.com'
 					}
@@ -242,7 +242,7 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-be6e139c1c.my.site-com.3g5hfjy6tcsa0zspauqygnvdc0ow.wa.crm.dev:6101/ESWCWC1765903918729/assets/js/init.js' onload='initAgentforceMessaging()'></script>
+	<script type='text/javascript' src='https://orgfarm-03ed939e5a.my.site-com.9jsfico4gb5c1r0lli71zl8oo1ks8i.wb.crm.dev:6101/ESWCWC1766091842698/assets/js/init.js' onload='initAgentforceMessaging()'></script>
 	<!-- END LOCAL -->
 	<!-- STM ORG -->
 	<!-- <script type='text/javascript'>
