--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 				agentforce_messaging.init(
 					'00DSB00000eI9Ij',
 					'MIAW',
-					'https://orgfarm-658c56387d.my.site-com.q33cvdyqy71m0vkwcej7d9vk80.wb.crm.dev:6101/ESWCWC1767040436688',
+					'https://orgfarm-ea8274375f.my.site-com.2wr6nikq5mev04k3rhqe6ojfc1.wc.crm.dev:6101/ESWCWC1767119159697',
 					{
 						scrt2URL: 'https://orgfarm-ced027a75c.test1.my.pc-rnd.salesforce-scrt.com'
 					}
@@ -242,7 +242,7 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-658c56387d.my.site-com.q33cvdyqy71m0vkwcej7d9vk80.wb.crm.dev:6101/ESWCWC1767040436688/assets/js/init.js' onload='initAgentforceMessaging()'></script>
+	<script type='text/javascript' src='https://orgfarm-ea8274375f.my.site-com.2wr6nikq5mev04k3rhqe6ojfc1.wc.crm.dev:6101/ESWCWC1767119159697/assets/js/init.js' onload='initAgentforceMessaging()'></script>
 	<!-- END LOCAL -->
 	<!-- STM ORG -->
 	<!-- <script type='text/javascript'>
