--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@
 				agentforce_messaging.settings.devMode = true;
 	
 				agentforce_messaging.init(
-					'00DSB00000eI9Ij',
-					'MIAW',
+					'00DLT00000AQQne',
+					'Food_Options',
 					'https://orgfarm-ea8274375f.my.site-com.2wr6nikq5mev04k3rhqe6ojfc1.wc.crm.dev:6101/ESWCWC1767119159697',
 					{
-						scrt2URL: 'https://orgfarm-ced027a75c.test1.my.pc-rnd.salesforce-scrt.com'
+						scrt2URL: 'https://orgfarm-188097b64c.test1.my.pc-rnd.salesforce-scrt.com'
 					}
 				);
 			} catch (err) {
