--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@
 				agentforce_messaging.settings.devMode = true;
 	
 				agentforce_messaging.init(
-					'00DVW000004eIn8',
-					'Food_Options3',
+					'00DLT00000AQPzW',
+					'Food_Options',
 					'https://orgfarm-ea8274375f.my.site-com.2wr6nikq5mev04k3rhqe6ojfc1.wc.crm.dev:6101/ESWCWC1767119159697',
 					{
-						scrt2URL: 'https://orgfarm-662990a129.test1.my.pc-rnd.salesforce-scrt.com'
+						scrt2URL: 'https://orgfarm-e918a904dc.test1.my.pc-rnd.salesforce-scrt.com'
 					}
 				);
 			} catch (err) {
