--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 	    </footer>
 	</body>
 	<!-- LOCAL/WS -->
-	<script type='text/javascript'>
+	<!-- <script type='text/javascript'>
 		function initAgentforceMessaging() {
 			try {
 				agentforce_messaging.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
@@ -242,21 +242,20 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-ea8274375f.my.site-com.2wr6nikq5mev04k3rhqe6ojfc1.wc.crm.dev:6101/ESWCWC1767119159697/assets/js/init.js' onload='initAgentforceMessaging()'></script>
+	<script type='text/javascript' src='https://orgfarm-ea8274375f.my.site-com.2wr6nikq5mev04k3rhqe6ojfc1.wc.crm.dev:6101/ESWCWC1767119159697/assets/js/init.js' onload='initAgentforceMessaging()'></script> -->
 	<!-- END LOCAL -->
 	<!-- STM ORG -->
-	<!-- <script type='text/javascript'>
+	<script type='text/javascript'>
 		function initEmbeddedMessaging() {
 			try {
 				embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
-				embeddedservice_bootstrap.settings.devMode = true;
 	
 				embeddedservice_bootstrap.init(
-					'00DSG00000YEMY9',
-					'MIAW_chat',
-					'https://orgfarm-578b5aa106.test1.my.pc-rnd.site.com/ESWChannel11756933866072',
+					'00DLT00000AQPzW',
+					'Food_Options',
+					'https://orgfarm-e918a904dc.test1.my.pc-rnd.site.com/ESWFoodOptionsv21767721572469',
 					{
-						scrt2URL: 'https://orgfarm-578b5aa106.test1.my.pc-rnd.salesforce-scrt.com'
+						scrt2URL: 'https://orgfarm-e918a904dc.test1.my.pc-rnd.salesforce-scrt.com'
 					}
 				);
 			} catch (err) {
@@ -264,5 +263,5 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-578b5aa106.test1.my.pc-rnd.site.com/ESWChannel11756933866072/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script> -->
+	<script type='text/javascript' src='https://orgfarm-e918a904dc.test1.my.pc-rnd.site.com/ESWFoodOptionsv21767721572469/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 </html>
