--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
 	
 				embeddedservice_bootstrap.init(
 					'00DLT00000AQPzW',
-					'Food_Options',
-					'https://orgfarm-e918a904dc.test1.my.pc-rnd.site.com/ESWFoodOptionsv21767721572469',
+					'Food_Options_v1',
+					'https://orgfarm-e918a904dc.test1.my.pc-rnd.site.com/ESWFoodOptions1756227953103',
 					{
 						scrt2URL: 'https://orgfarm-e918a904dc.test1.my.pc-rnd.salesforce-scrt.com'
 					}
@@ -263,5 +263,5 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-e918a904dc.test1.my.pc-rnd.site.com/ESWFoodOptionsv21767721572469/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+	<script type='text/javascript' src='https://orgfarm-e918a904dc.test1.my.pc-rnd.site.com/ESWFoodOptions1756227953103/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 </html>
