--- a/index.html
+++ b/index.html
@@ -246,22 +246,22 @@
 	<!-- END LOCAL -->
 	<!-- STM ORG -->
 	<script type='text/javascript'>
-		function initEmbeddedMessaging() {
-			try {
-				embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
-	
-				embeddedservice_bootstrap.init(
-					'00DLT00000AQPzW',
-					'Food_Options_v1',
-					'https://orgfarm-e918a904dc.test1.my.pc-rnd.site.com/ESWFoodOptionsv21767721572469',
-					{
-						scrt2URL: 'https://orgfarm-e918a904dc.test1.my.pc-rnd.salesforce-scrt.com'
-					}
-				);
-			} catch (err) {
-				console.error('Error loading Embedded Messaging: ', err);
-			}
-		};
-	</script>
-	<script type='text/javascript' src='https://orgfarm-e918a904dc.test1.my.pc-rnd.site.com/ESWFoodOptionsv21767721572469/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+	function initEmbeddedMessaging() {
+		try {
+			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+
+			embeddedservice_bootstrap.init(
+				'00DLT00000AQPzW',
+				'Food_Options',
+				'https://orgfarm-e918a904dc.test1.my.pc-rnd.site.com/ESWFoodOptions1756227953103',
+				{
+					scrt2URL: 'https://orgfarm-e918a904dc.test1.my.pc-rnd.salesforce-scrt.com'
+				}
+			);
+		} catch (err) {
+			console.error('Error loading Embedded Messaging: ', err);
+		}
+	};
+</script>
+<script type='text/javascript' src='https://orgfarm-e918a904dc.test1.my.pc-rnd.site.com/ESWFoodOptions1756227953103/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 </html>
