--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 	
 				embeddedservice_bootstrap.init(
 					'00DLT00000AQPzW',
-					'Food_Options',
+					'Food_Options_v1',
 					'https://orgfarm-e918a904dc.test1.my.pc-rnd.site.com/ESWFoodOptions1756227953103',
 					{
 						scrt2URL: 'https://orgfarm-e918a904dc.test1.my.pc-rnd.salesforce-scrt.com'
