--- a/index.html
+++ b/index.html
@@ -251,11 +251,11 @@
 				embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 	
 				embeddedservice_bootstrap.init(
-					'00DLT00000AQPzW',
-					'Food_Options_v1',
-					'https://orgfarm-e918a904dc.test1.my.pc-rnd.site.com/ESWFoodOptions1756227953103',
+					'00DLT00000Bqeaw',
+					'MIAW',
+					'https://orgtempused.test1.my.pc-rnd.site.com/ESWMessagingComponents1767823942460',
 					{
-						scrt2URL: 'https://orgfarm-e918a904dc.test1.my.pc-rnd.salesforce-scrt.com'
+						scrt2URL: 'https://orgtempused.test1.my.pc-rnd.salesforce-scrt.com'
 					}
 				);
 			} catch (err) {
@@ -263,5 +263,5 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-e918a904dc.test1.my.pc-rnd.site.com/ESWFoodOptions1756227953103/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+	<script type='text/javascript' src='https://orgtempused.test1.my.pc-rnd.site.com/ESWMessagingComponents1767823942460/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 </html>
