--- a/index.html
+++ b/index.html
@@ -250,10 +250,11 @@
 			try {
 				embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 				embeddedservice_bootstrap.settings.devMode = true;
+	
 				embeddedservice_bootstrap.init(
 					'00DSG00000YEMY9',
-					'Dep4',
-					'https://orgfarm-578b5aa106.test1.my.pc-rnd.site.com/ESWDep41764881316051',
+					'CWC',
+					'https://orgfarm-578b5aa106.test1.my.pc-rnd.site.com/ESWCWC1768235047447',
 					{
 						scrt2URL: 'https://orgfarm-578b5aa106.test1.my.pc-rnd.salesforce-scrt.com'
 					}
@@ -263,5 +264,5 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-578b5aa106.test1.my.pc-rnd.site.com/ESWDep41764881316051/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+	<script type='text/javascript' src='https://orgfarm-578b5aa106.test1.my.pc-rnd.site.com/ESWCWC1768235047447/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 </html>
