--- a/index.html
+++ b/index.html
@@ -252,11 +252,11 @@
 				embeddedservice_bootstrap.settings.devMode = true;
 	
 				embeddedservice_bootstrap.init(
-					'00DSG00000YEMY9',
-					'CWC',
-					'https://orgfarm-578b5aa106.test1.my.pc-rnd.site.com/ESWCWC1768235047447',
+					'00DLT00000Bqeaw',
+					'Messaging_Components',
+					'https://orgtempused.test1.my.pc-rnd.site.com/ESWMessagingComponents1767823942460',
 					{
-						scrt2URL: 'https://orgfarm-578b5aa106.test1.my.pc-rnd.salesforce-scrt.com'
+						scrt2URL: 'https://orgtempused.test1.my.pc-rnd.salesforce-scrt.com'
 					}
 				);
 			} catch (err) {
@@ -264,5 +264,5 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-578b5aa106.test1.my.pc-rnd.site.com/ESWCWC1768235047447/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+	<script type='text/javascript' src='https://orgtempused.test1.my.pc-rnd.site.com/ESWMessagingComponents1767823942460/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 </html>
