--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 	
 				embeddedservice_bootstrap.init(
 					'00DLT00000Bqeaw',
-					'Messaging_Components',
+					'MIAW',
 					'https://orgtempused.test1.my.pc-rnd.site.com/ESWMessagingComponents1767823942460',
 					{
 						scrt2URL: 'https://orgtempused.test1.my.pc-rnd.salesforce-scrt.com'
