--- a/index.html
+++ b/index.html
@@ -249,12 +249,11 @@
 		function initEmbeddedMessaging() {
 			try {
 				embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
-				embeddedservice_bootstrap.settings.devMode = true;
 	
 				embeddedservice_bootstrap.init(
 					'00DLT00000Bqeaw',
-					'MIAW',
-					'https://orgtempused.test1.my.pc-rnd.site.com/ESWMessagingComponents1767823942460',
+					'Custom_Services',
+					'https://orgtempused.test1.my.pc-rnd.site.com/ESWCustomServices1767812695643',
 					{
 						scrt2URL: 'https://orgtempused.test1.my.pc-rnd.salesforce-scrt.com'
 					}
@@ -264,5 +263,5 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgtempused.test1.my.pc-rnd.site.com/ESWMessagingComponents1767823942460/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+	<script type='text/javascript' src='https://orgtempused.test1.my.pc-rnd.site.com/ESWCustomServices1767812695643/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 </html>
