--- a/index.html
+++ b/index.html
@@ -244,19 +244,18 @@
 	</script>
 	<script type='text/javascript' src='https://orgfarm-ea8274375f.my.site-com.2wr6nikq5mev04k3rhqe6ojfc1.wc.crm.dev:6101/ESWCWC1767119159697/assets/js/init.js' onload='initAgentforceMessaging()'></script> -->
 	<!-- END LOCAL -->
-	<!-- STM ORG -->
+	<!-- STM ORG 260 -->
 	<script type='text/javascript'>
 		function initEmbeddedMessaging() {
 			try {
 				embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
-				embeddedservice_bootstrap.settings.devMode = true;
-				
+	
 				embeddedservice_bootstrap.init(
-					'00DLT00000Bqeaw',
-					'Custom_Services',
-					'https://orgtempused.test1.my.pc-rnd.site.com/ESWCustomServices1767812695643',
+					'00DSB00000fRjBJ',
+					'RouteToQueue',
+					'https://orgfarm-22959bed9c.test1.my.pc-rnd.site.com/ESWFoodOptions1756418785698',
 					{
-						scrt2URL: 'https://orgtempused.test1.my.pc-rnd.salesforce-scrt.com'
+						scrt2URL: 'https://orgfarm-22959bed9c.test1.my.pc-rnd.salesforce-scrt.com'
 					}
 				);
 			} catch (err) {
@@ -264,5 +263,5 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgtempused.test1.my.pc-rnd.site.com/ESWCustomServices1767812695643/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+	<script type='text/javascript' src='https://orgfarm-22959bed9c.test1.my.pc-rnd.site.com/ESWFoodOptions1756418785698/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 </html>
