--- a/index.html
+++ b/index.html
@@ -251,11 +251,11 @@
 				embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 	
 				embeddedservice_bootstrap.init(
-					'00DSB00000fRjBJ',
-					'RouteToQueue',
-					'https://orgfarm-22959bed9c.test1.my.pc-rnd.site.com/ESWFoodOptions1756418785698',
+					'00DSG00000YEMY9',
+					'MIAW_chat',
+					'https://orgfarm-578b5aa106.demo.test1.my.pc-rnd.site.com/ESWCWC1768235047447',
 					{
-						scrt2URL: 'https://orgfarm-22959bed9c.test1.my.pc-rnd.salesforce-scrt.com'
+						scrt2URL: 'https://orgfarm-578b5aa106.demo.test1.my.pc-rnd.salesforce-scrt.com'
 					}
 				);
 			} catch (err) {
@@ -263,5 +263,5 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-22959bed9c.test1.my.pc-rnd.site.com/ESWFoodOptions1756418785698/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+	<script type='text/javascript' src='https://orgfarm-578b5aa106.demo.test1.my.pc-rnd.site.com/ESWCWC1768235047447/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 </html>
