--- a/index.html
+++ b/index.html
@@ -223,29 +223,28 @@
 	    </footer>
 	</body>
 	<!-- LOCAL/WS -->
-	<!-- <script type='text/javascript'>
-		function initAgentforceMessaging() {
-			try {
-				agentforce_messaging.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
-				agentforce_messaging.settings.devMode = true;
-	
-				agentforce_messaging.init(
-					'00DLT00000AQPzW',
-					'Food_Options',
-					'https://orgfarm-ea8274375f.my.site-com.2wr6nikq5mev04k3rhqe6ojfc1.wc.crm.dev:6101/ESWCWC1767119159697',
-					{
-						scrt2URL: 'https://orgfarm-e918a904dc.test1.my.pc-rnd.salesforce-scrt.com'
-					}
-				);
-			} catch (err) {
-				console.error('Error loading Embedded Messaging: ', err);
-			}
-		};
-	</script>
-	<script type='text/javascript' src='https://orgfarm-ea8274375f.my.site-com.2wr6nikq5mev04k3rhqe6ojfc1.wc.crm.dev:6101/ESWCWC1767119159697/assets/js/init.js' onload='initAgentforceMessaging()'></script> -->
+	<script type='text/javascript'>
+	function initEmbeddedMessaging() {
+		try {
+			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+
+			embeddedservice_bootstrap.init(
+				'00Dxx00c4PwZ5bQ',
+				'CWC',
+				'https://orgfarm-0199463627.my.site-com.f26ej5susp810x6gz6q8j6yox.wc.crm.dev:6101/ESWCWC1769721108388',
+				{
+					scrt2URL: 'https://orgfarm-a504d7a61b.test1.my.pc-rnd.salesforce-scrt.com'
+				}
+			);
+		} catch (err) {
+			console.error('Error loading Embedded Messaging: ', err);
+		}
+	};
+</script>
+<script type='text/javascript' src='https://orgfarm-0199463627.my.site-com.f26ej5susp810x6gz6q8j6yox.wc.crm.dev:6101/ESWCWC1769721108388/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 	<!-- END LOCAL -->
 	<!-- STM ORG 260 -->
-	<script type='text/javascript'>
+	<!-- <script type='text/javascript'>
 		function initEmbeddedMessaging() {
 			try {
 				embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
@@ -263,5 +262,5 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-578b5aa106.demo.test1.my.pc-rnd.site.com/ESWCWC1768235047447/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+	<script type='text/javascript' src='https://orgfarm-578b5aa106.demo.test1.my.pc-rnd.site.com/ESWCWC1768235047447/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script> -->
 </html>
