--- a/index.html
+++ b/index.html
@@ -226,9 +226,10 @@
 	<script type='text/javascript'>
 	function initEmbeddedMessaging() {
 		try {
-			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+			agentforce_messaging.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+			agentforce_messaging.settings.devMode = true;
 
-			embeddedservice_bootstrap.init(
+			agentforce_messaging.init(
 				'00Dxx00c4PwZ5bQ',
 				'CWC',
 				'https://orgfarm-0199463627.my.site-com.f26ej5susp810x6gz6q8j6yox.wc.crm.dev:6101/ESWCWC1769721108388',
