--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 		}
 	};
 </script>
-<script type='text/javascript' src='https://orgfarm-0199463627.my.site-com.f26ej5susp810x6gz6q8j6yox.wc.crm.dev:6101/ESWCWC1769721108388/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+<script type='text/javascript' src='https://orgfarm-0199463627.my.site-com.f26ej5susp810x6gz6q8j6yox.wc.crm.dev:6101/ESWCWC1769721108388/assets/js/init.js' onload='initEmbeddedMessaging()'></script>
 	<!-- END LOCAL -->
 	<!-- STM ORG 260 -->
 	<!-- <script type='text/javascript'>
