--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
 				agentforce_messaging.settings.devMode = true;
 	
 				agentforce_messaging.init(
-					'00Dxx00c4PwZ5bQ',
-					'CWC',
+					'00DSG00000WuEp3',
+					'MIAW_2',
 					'https://orgfarm-0199463627.my.site-com.f26ej5susp810x6gz6q8j6yox.wc.crm.dev:6101/ESWCWC1769721108388',
 					{
 						scrt2URL: 'https://orgfarm-a504d7a61b.test1.my.pc-rnd.salesforce-scrt.com'
