--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 				agentforce_messaging.init(
 					'00DSG00000WuEp3', // <-- STM Org
 					'MIAW_1', // <-- STM Org
-					'https://orgfarm-0199463627.my.site-com.f26ej5susp810x6gz6q8j6yox.wc.crm.dev:6101/ESWCWC1769721108388', // <-- LOCAL Org
+					'https://orgfarm-142e15286b.my.site-com.d5d7dh1b2twv0sxljxernw38j1.wb.crm.dev:6101/ESWMIAW1770148148943', // <-- LOCAL Org
 					{
 						scrt2URL: 'https://orgfarm-a504d7a61b.test1.my.pc-rnd.salesforce-scrt.com' // <-- STM Org
 					}
@@ -242,7 +242,7 @@
 			}
 		};
 	</script>
-	<script type='text/javascript' src='https://orgfarm-0199463627.my.site-com.f26ej5susp810x6gz6q8j6yox.wc.crm.dev:6101/ESWCWC1769721108388/assets/js/init.js' onload='initEmbeddedMessaging()'></script> <!-- << LOCAL script  -->
+	<script type='text/javascript' src='https://orgfarm-142e15286b.my.site-com.d5d7dh1b2twv0sxljxernw38j1.wb.crm.dev:6101/ESWMIAW1770148148943/assets/js/init.js' onload='initEmbeddedMessaging()'></script> <!-- << LOCAL script  -->
 	<!-- END LOCAL -->
 	<!-- STM ORG 260 -->
 	<!-- <script type='text/javascript'>
