--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@
 	<script type='text/javascript'>
 		function initEmbeddedMessaging() {
 			try {
-				agentforce_messaging.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
-				agentforce_messaging.settings.devMode = true;
+				embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+				embeddedservice_bootstrap.settings.devMode = true;
 	
-				agentforce_messaging.init(
+				embeddedservice_bootstrap.init(
 					'00DSG00000WuEp3', // <-- STM Org
 					'MIAW_1', // <-- STM Org
 					'https://orgfarm-142e15286b.my.site-com.d5d7dh1b2twv0sxljxernw38j1.wb.crm.dev:6101/ESWMIAW1770148148943', // <-- LOCAL Org
