--- a/index.html
+++ b/index.html
@@ -230,11 +230,14 @@
 				agentforce_messaging.settings.devMode = true;
 	
 				agentforce_messaging.init(
-					'00DSG00000WuEp3', // <-- STM Org
-					'MIAW_1', // <-- STM Org
+					// '00DSG00000WuEp3', // <-- STM Org
+					'00DSG00000YEMY9',
+					// 'MIAW_1', // <-- STM Org
+					'MIAW2',
 					'https://orgfarm-e4f120f50f.my.site-com.d5d7dh1b2twv0sxljxernw38j1.wb.crm.dev:6101/ESWCWC1770222019224', // <-- LOCAL Org
 					{
-						scrt2URL: 'https://orgfarm-a504d7a61b.test1.my.pc-rnd.salesforce-scrt.com' // <-- STM Org
+						// scrt2URL: 'https://orgfarm-a504d7a61b.test1.my.pc-rnd.salesforce-scrt.com' // <-- STM Org
+						scrt2URL: 'https://orgfarm-578b5aa106.demo.test1.my.pc-rnd.salesforce-scrt.com'
 					}
 				);
 			} catch (err) {
